<resources>
    <string name="app_name">AWIS</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_title">Search product</string>
    <string name="signin">Login</string>
    <string name="cancel">Cancel</string>
    <string name="search_product">Search product</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About AWIS</string>
    <string name="item_logout">Logout</string>
    <string name="item_shopping_cart">Shopping cart</string>
    <string name="about_awis">About AWIS</string>
    <string name="ok">OK</string>
    <string name="item_login">Login</string>
    <string name="item_save">Save</string>
    <string name="user_photo">User photo</string>
    <string name="personal_information">Personal information</string>
    <string name="user_name_field">User name *</string>
    <string name="user">User</string>
    <string name="email_field">Email *</string>
    <string name="shipping_address_field">Shopping address *</string>
    <string name="company_field">Company</string>
    <string name="danger_zone">Danger zone</string>
    <string name="delete_account">Delete account</string>
    <string name="pay">Pay</string>
    <string name="back">Back</string>
    <string name="payment_information">Payment information</string>
    <string name="enter_credit_card">Enter credit card</string>
    <string name="credit_card_number_field">Credit card number *</string>
    <string name="credit_card_expiration_field">Expiration (MM/YY) *</string>
    <string name="credit_card_code_field">Card code (CVV) *</string>
    <string name="product">Product</string>
    <string name="product_image_content_desc">Product image</string>
    <string name="dimensions">Dimensions</string>
    <string name="product_size_field">Size:</string>
    <string name="product_weight_field">Weight:</string>
    <string name="add_to_cart">Add to shopping cart</string>
    <string name="checkout">Checkout</string>
    <string name="added_products_text">Added products</string>
    <string name="remove_item_content_desc">Remove item</string>
    <string name="product_photo_content_desc">Product photo</string>
    <string name="total_field">Total:</string>
    <string name="decrement_quantity_content_desc">Decrement quantity</string>
    <string name="increment_quantity_content_desc">Increment quantity</string>
    <string name="category_image_content_desc">Category image</string>
    <string name="categories">Categories</string>
    <string name="offices">Offices</string>
    <string name="notifications">Notifications</string>
    <string name="user_photo_content_desc">User photo</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="payment_information_activity_info">Make your next purchase fast and easy by adding your payment method now!</string>
    <string name="add">Add</string>
    <string name="credit_card_added_msg">Credit card added successful</string>
    <string name="product_search_hint">Search a product</string>
    <string name="product_search_results_title">Results for: %s</string>
    <string name="product_by_category_results_title">Category: %s</string>
    <string name="product_price_dollars">$%.2f</string>
    <string name="about_msg">
        Android app development of AWIS: Adventure Works Information Systems based on the MS
        SQLServer Adventure Works database.
    </string>
    <string name="about_team_msg">
        Developed by Tobias Briones and Juan Varela
    </string>
    <string name="about_github">
        <a href="https://github.com/TobiasBriones-Team/course.mm543.awis">
            GitHub
        </a>
    </string>
    <string name="copyright">Copyright © 2020 Tobias Briones. All rights reserved.</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="access_to_awis">Access to AWIS</string>
    <string name="invalid_login_msg">Invalid login credentials</string>
</resources>
