<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_10">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_login_black_18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/access_to_awis">

    </TextView>

    <EditText
        android:id="@+id/customer_login_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/customer_login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword" />
</LinearLayout>
